<resources>
    <string name="app_name">SmartRoom</string>
    <string name="buttonLogin">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_room_display">RoomDisplay</string>
    <string name="buttonReserve">Generate Door PIN</string>
    <string name="display_room">Display Room</string>
    <string name="room_number">Room Number</string>
    <string name="room_num_of_pax">Num of Pax</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="hint_date">Select A Date</string>
    <string name="hint_time">Select a Time Slot</string>
    <string name="OccupiedDialogTitle">Oops!</string>
    <string name="timeLeft">Remaining Time : </string>
    <string name="noted">Noted</string>
    <string name="extend">Extend</string>
    <string name="nothx">No, thanks</string>
    <string name="mychannel">My Channel</string>
    <string name="channeldesc">This is my channel</string>
    <string name="unlock_door">Unlock the Door</string>
    <string name="enter_pin">ENTER 6 DIGIT PIN</string>
</resources>